workspace(name = "com_stablecc_scclib")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# required by googletest
http_archive(
	name = "rules_python", # 2021-05-17T00:24:16Z
	sha256 = "98b3c592faea9636ac8444bfd9de7f3fb4c60590932d6e6ac5946e3f8dbd5ff6",
	strip_prefix = "rules_python-ed6cc8f2c3692a6a7f013ff8bc185ba77eb9b4d2",
	urls = ["https://github.com/bazelbuild/rules_python/archive/ed6cc8f2c3692a6a7f013ff8bc185ba77eb9b4d2.zip"],
)

# googletest/googlemock
# bazel test @com_google_googletest//googletest/test:gtest_all_test
# bazel test @com_google_googletest//googlemock/test:gmock_all_test
http_archive(
	name = "com_google_googletest",  # 2021-07-09T13:28:13Z
	sha256 = "12ef65654dc01ab40f6f33f9d02c04f2097d2cd9fbe48dc6001b29543583b0ad",
	strip_prefix = "googletest-8d51ffdfab10b3fba636ae69bc03da4b54f8c235",
	urls = ["https://github.com/google/googletest/archive/8d51ffdfab10b3fba636ae69bc03da4b54f8c235.zip"],
)

# google benchmark
# bazel test @com_github_google_benchmark//test:link_main_test
http_archive(
	name = "com_github_google_benchmark",  # 2021-09-20T09:19:51Z
	sha256 = "62e2f2e6d8a744d67e4bbc212fcfd06647080de4253c97ad5c6749e09faf2cb0",
	strip_prefix = "benchmark-0baacde3618ca617da95375e0af13ce1baadea47",
	urls = ["https://github.com/google/benchmark/archive/0baacde3618ca617da95375e0af13ce1baadea47.zip"],
)
