#
# workspace file that provides @com_stablecc_scclib from the project root
#

workspace(name = "com_stablecc_scclib")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# https://github.com/bazelbuild/rules_python/releases/tag/0.6.0
http_archive(
	name = "rules_python",
	sha256 = "f578b22630b8278ad75aa2d35128bd9ae8c387bfe687f310eda0e24404d2e6c8",
	strip_prefix = "rules_python-b842276b79320b320998a0db47181b93716babed",
	urls = ["https://github.com/bazelbuild/rules_python/archive/b842276b79320b320998a0db47181b93716babed.zip"],
)

# https://github.com/google/googletest/releases/tag/release-1.11.0
# bazel test @com_google_googletest//googletest/test:gtest_all_test
# bazel test @com_google_googletest//googlemock/test:gmock_all_test
http_archive(
	name = "com_google_googletest",
	sha256 = "8daa1a71395892f7c1ec5f7cb5b099a02e606be720d62f1a6a98f8f8898ec826",
	strip_prefix = "googletest-e2239ee6043f73722e7aa812a459f54a28552929",
	urls = ["https://github.com/google/googletest/archive/e2239ee6043f73722e7aa812a459f54a28552929.zip"],
)

# https://github.com/google/benchmark/releases/tag/v1.6.1
# bazel test @com_github_google_benchmark//test:link_main_test
http_archive(
	name = "com_github_google_benchmark",
	sha256 = "3b156bac7800f67858afe6ec2c280e291da70c9fc55377cb47ac11cc83f3128e",
	strip_prefix = "benchmark-0d98dba29d66e93259db7daa53a9327df767a415",
	urls = ["https://github.com/google/benchmark/archive/0d98dba29d66e93259db7daa53a9327df767a415.zip"],
)

# Intel IPP library (see intel.txt)
new_local_repository(
	name = "import_ipp",
	path = "/opt/intel/ipp",
	build_file = "ipp.BUILD.bazel",
)

# Intel IPP Cryptography library (see intel.txt)
new_local_repository(
	name = "import_ippcp",
	path = "/opt/intel/ippcp",
	build_file = "ippcp.BUILD.bazel",
)
