config_setting(
	name = "ippcp",
	define_values = {
		"ipp": "on",
	},
)

cc_library(
	name = "scccryptolib",
	srcs = select({
		":ippcp": [
			"ippcp/bignum.cc",
			"ippcp/random.cc",
		],
		"//conditions:default": [
			"openssl/bignum.cc",
			"openssl/random.cc",
		],
	}) + [
		"secvec.cc",
		"uuid.cc",
	],
	hdrs = [
		"pub/crypto/bignum.h",
		"pub/crypto/random.h",
		"pub/crypto/secvec.h",
		"pub/crypto/uuid.h",
	],
	includes = [
		"pub",
	],
	copts = ["-std=c++17"],
	deps = select({
		":ippcp": [
			"@com_stablecc_scclib_ippcp//:importippcplib",
		],
		"//conditions:default": [
			"@com_stablecc_scclib_openssl//:importopenssllib",
		],
	}) + [
		"@com_stablecc_scclib//util:sccutillib",
		"@com_stablecc_scclib//encode:sccencodelib",
	],
	visibility = ["//visibility:public"],
)
