# BSD 3-Clause License
# 
# Copyright (c) 2022, Stable Cloud Computing, Inc.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
# 
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
# 
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
# 
# 3. Neither the name of the copyright holder nor the names of its
#    contributors may be used to endorse or promote products derived from
#    this software without specific prior written permission.
# 
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
config_setting(
	name = "ippcp",
	define_values = {
		"ipp": "on",
	},
)

cc_library(
	name = "scccryptolib",
	srcs = select({
		":ippcp": [
			"ippcp/bignum.cc",
			"ippcp/random.cc",
			"ippcp/hash.cc",
			"ippcp/rsa.cc",
			"ippcp/ecc.cc",
			"ippcp/cipher.cc",
			"cert.cc",
		],
		"//conditions:default": [
			"openssl/bignum.cc",
			"openssl/random.cc",
			"openssl/hash.cc",
		],
	}) + [
		"secvec.cc",
		"uuid.cc",
		"der.cc",
	],
	hdrs = [
		"pub/crypto/bignum.h",
		"pub/crypto/random.h",
		"pub/crypto/secvec.h",
		"pub/crypto/uuid.h",
		"pub/crypto/hash.h",
		"pub/crypto/der.h",
		"pub/crypto/rsa.h",
		"pub/crypto/ecc.h",
		"pub/crypto/cipher.h",
		"pub/crypto/cert.h",
	],
	includes = [
		"pub",
	],
	copts = ["-std=c++17"],
	deps = select({
		":ippcp": [
			"@com_stablecc_scclib_ippcp//:importippcplib",
		],
		"//conditions:default": [
			"@com_stablecc_scclib_openssl//:importopenssllib",
		],
	}) + [
		"@com_stablecc_scclib//util:sccutillib",
		"@com_stablecc_scclib//encode:sccencodelib",
	],
	visibility = ["//visibility:public"],
)
