cc_library(
	name = "sccnetlib",
	srcs = [
		"inet.cc",
		"net_if.cc",
		"socket.cc",
		"unix.cc",
	],
	hdrs = [
		"pub/net/inet.h",
		"pub/net/net_if.h",
		"pub/net/socket.h",
		"pub/net/unix.h",
	],
	includes = [
		"pub",
	],
	copts = ["-std=c++17"],
	deps = [
		"@com_stablecc_scclib//util:sccutillib"
	],
	visibility = ["//visibility:public"],
)
