cc_test(
	name = "all_tests",
	size = "small",
	srcs = [
		"event.cc",
		"filedesc.cc",
		"fs.cc",
		"iohelper.cc",
		"iostream.cc",
		"logger.cc",
		"poller.cc",
		"safe_clib.cc",
	],
	copts = ["-std=c++17"],
	deps = [
		"@com_google_googletest//:gtest_main",
		"@com_stablecc_scclib//util:lib",
	],
)
